<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">All Guests</string>
    <string name="menu_presents">Presents</string>
    <string name="menu_absents">Absents</string>
    <string name="name">Name</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="save">Save</string>
    <string name="confirmation">Confirmation</string>
    <string name="success_save">User saved successfully!</string>
    <string name="failed_save">Failed saving user!</string>
</resources>