<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="net.alerok.guests.activity.allguests.AllGuestsFragment"
        android:label="@string/menu_all_guests"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_presents"
        android:name="net.alerok.guests.activity.present.PresentFragment"
        android:label="@string/menu_presents"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_absents"
        android:name="net.alerok.guests.activity.absent.AbsentFragment"
        android:label="@string/menu_absents"
        tools:layout="@layout/fragment_slideshow" />
</navigation>